--- a/VRChat/61/968961.html
+++ b/VRChat/61/968961.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ETQncpQKQgPeCPzzm3Zz+QKtvAaQiWMsym+llGupH/s="></script>
+    "OKb1OaCZI4/L5qG5gjtISZE8U02D25pvw/AgqO4fYYQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ヘアーアクセサリー】ビッグポニーテール【３Dモデル】","description":"【商品紹介】\n　\n　unity上でヘッドに取り付けられるヘアーアクセサリーです。\n　ボーンを入れているため、Dynamicboneを使用することで\n　揺らすことができます。\n\n\n【VRchat内でのpedestal使用について】\n\n　非営利での利用のみワールド設置のモデルへの付属が可能です\n\n--------------------\n\nモデルデータ・テクスチャーデータの営利を目的とした再配付・販売は\n改変の有無を問わず禁止します。\nオレンジみかん栽培所","url":"https://booth.pm/ja/items/968961","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4e60aa39-4a63-4661-b1ed-1f656886ab4d/i/968961/e56d0de2-e952-47f2-98f6-7b02d14bd49d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ETQncpQKQgPeCPzzm3Zz+QKtvAaQiWMsym+llGupH/s="></script>
+    nonce="OKb1OaCZI4/L5qG5gjtISZE8U02D25pvw/AgqO4fYYQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,10 +155,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/968961/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              304
+                              305
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/968961/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              304
+                              305
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
