--- a/VRChat/84/982184.html
+++ b/VRChat/84/982184.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Kd8cYQzJaKWC6oYlp576cX4RLclomXpkApZ2tkOZILE="></script>
+    "o7gr9pzy+n2Wf64DN2Ex47L5b/HhgK/CuNO5aod4nZM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF 機械式ジェットハンマー","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n全てを破壊しろ。\n圧倒的重量、重厚さ。そして搭載された驚異の七連ブースターによる加速に耐えられるモノはなどいない。\n立ちふさがる全てを粉砕し、勝利を掴め。\n\nエミッション設定済み。\nお好みでアセットストアなどから炎系パーティクルを購入されるとよりブースターらしくなります。\n\n\n三角面：786\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/982184","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/982184/63d81b89-0218-48ad-b86c-81bdc0683802_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Kd8cYQzJaKWC6oYlp576cX4RLclomXpkApZ2tkOZILE="></script>
+    nonce="o7gr9pzy+n2Wf64DN2Ex47L5b/HhgK/CuNO5aod4nZM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/982184/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/982184/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
