--- a/VRChat/70/982170.html
+++ b/VRChat/70/982170.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eLkg30aOd3WSbVunprSDnb3ePDr+Gr95hkM1uoeI9Vk="></script>
+    "Vj6PuB3OA91hYOo5jUSfw9oQr3qd0D+jm7R5PhkmdaI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"拘束チェーンパーティクル","description":"うねうねと鎖が伸びる、拘束攻撃風のパーティクルデータです。\n色の変更箇所だけ画像で説明してあります。\n\nご自由にお使いください。","url":"https://booth.pm/ja/items/982170","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1e917239-eb4f-44e6-8fa0-efcfc40c090b/i/982170/cf0eb1b4-bf8a-41a4-9ef7-eb7c9757efc1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eLkg30aOd3WSbVunprSDnb3ePDr+Gr95hkM1uoeI9Vk="></script>
+    nonce="Vj6PuB3OA91hYOo5jUSfw9oQr3qd0D+jm7R5PhkmdaI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/982170/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               388
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/982170/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               388
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
