--- a/VRChat/84/981884.html
+++ b/VRChat/84/981884.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EhJL8C3dNN+J1P+t8DKNV4AEYVNibMUzIUh2DkheW3U="></script>
+    "PC3nVzsd3dqL8NMPLjhEIyzgyps0E48SgEMLNEL4gv4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クールソード(配布)","description":"かっこいい剣です。そう言って世に放った前作の剣。\nとある猫に「カッコイイｗカッコイイｗ」と、いじられいじられ苦汁をなめた前作の剣。\nそれを払拭すべく、自分なりにカッコイイ要素を+してみました。\n僕の中ではめちゃめちゃかっこいいと思ってます。","url":"https://booth.pm/ja/items/981884","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/981884/b012a9e2-8678-4ec8-b322-c8aad5c1b558_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EhJL8C3dNN+J1P+t8DKNV4AEYVNibMUzIUh2DkheW3U="></script>
+    nonce="PC3nVzsd3dqL8NMPLjhEIyzgyps0E48SgEMLNEL4gv4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/981884/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/981884/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
