--- a/VRChat/73/930873.html
+++ b/VRChat/73/930873.html
@@ -70,9 +70,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6+DkfUu51Ktttqw/jJQHMN9VC1KfnjoS8iUUWE0RPDU="></script>
+    "mRhysKpnV+f/nFjzHdOdM563gDeh1j3IveLBILV7UJk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"脊椎剣","description":"ありふれた骨のまんま剣です","url":"https://booth.pm/ja/items/930873","offers":{"priceCurrency":"JPY","@type":"Offer","price":"108"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/930873/5214229b-13aa-4091-8cfb-4d2f35f4de21_base_resized.jpg"}
     </script>
@@ -86,7 +86,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6+DkfUu51Ktttqw/jJQHMN9VC1KfnjoS8iUUWE0RPDU="></script>
+    nonce="mRhysKpnV+f/nFjzHdOdM563gDeh1j3IveLBILV7UJk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -110,6 +110,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/930873/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/930873/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
