--- a/VRChat/36/980236.html
+++ b/VRChat/36/980236.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XGV8uX5N0jAgRdSU4rXsAnAvn4MOB0JMGuil1LWzCjA="></script>
+    "BCqbzC8gCy5zrD+r568YR79lujkuTvQNUed+FNef1uw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DX装備セット　タイムグラスウェビング","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n\n【説明】\n光る！(emissionで)回る(アニメーションを入れれば)DX 装備セット！\n本体に砂時計をセット！アニメーションさせて回せ！！\n左右に好きな装備をそれっぽくつけることもできるぞ！\nさらに剣とナックルの装備が追加！2つの武器を組み合わせてガンモードにできるぞ！\n\nアップデート1.2内容: ウェビングのテクスチャの追加、ポリゴン変更\n\nアップデート1.3内容: アイテムのデザイン大幅変更、低ポリゴン化、鎧の追加\n\n\nアップデート1.4内容:キックアニメーション、パーティクル、武器の修正他、合体はブレードをオフにして組み合わせると可能\n\nウェビング　三角面:1,171(アイテム含む)\n武器　　　　三角面:1,749\n鎧　　　　　三角面:1,260\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/980236","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/8af5d090-df4c-4849-965f-b38941abdc0c/i/980236/afbe698e-c540-4a5a-a20d-f3acd524efcd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XGV8uX5N0jAgRdSU4rXsAnAvn4MOB0JMGuil1LWzCjA="></script>
+    nonce="BCqbzC8gCy5zrD+r568YR79lujkuTvQNUed+FNef1uw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/980236/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/980236/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
