--- a/VRChat/82/979782.html
+++ b/VRChat/82/979782.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SqIIklwJJa/cALLztwOXSeKNYN3FyklegWDe1+mPpCE="></script>
+    "89xQPJfad9Z6D+HxyeaNkHtNph5LWq9zZsmZVjaazCE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"とけかけアイス","description":"とけかけのアイス\nVRChat用のアイテムとして作ってみました。\n4色のテクスチャとノーマルマップ同梱\nFBX形式、ポリ数は650です。\nそのままやデータを取り出せる形式での再配布、再販以外は自由にしてください。","url":"https://booth.pm/ja/items/979782","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/65a07bda-dcd9-4c17-bb24-23ec1ab4f9db/i/979782/7e51efee-4ca7-42b6-b2ca-789dbce7f42b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SqIIklwJJa/cALLztwOXSeKNYN3FyklegWDe1+mPpCE="></script>
+    nonce="89xQPJfad9Z6D+HxyeaNkHtNph5LWq9zZsmZVjaazCE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/979782/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               288
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/979782/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               288
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
